# copier-python-uv

./: .gitignore  AGENTS.md  Makefile  README.md  answers.yml  copier.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
project/: pyproject.toml.jinja
project/.devcontainer/: devcontainer.json.jinja
