[project]
name = "copier-python-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "copier>=9.10.2",
    "copier-templates-extensions>=0.3.2",
    "git-changelog>=2.6.2",
    "jinja2>=3.1.6",
    "markdown-callouts>=0.4.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.20",
    "reuse>=5.1.1",
    "ruff>=0.13.0",
]
