[project]
name = "copier-python-uv"
version = "1.12.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "copier>=9.10.2",
    "copier-templates-extensions>=0.3.2",
    "git-changelog>=2.6.2",
    "jinja2>=3.1.6",
    "markdown-callouts>=0.4.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.20",
    "reuse>=5.1.1",
    "ruff>=0.13.0",
]

[tool.bumpversion]
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
tag = true
sign_tags = false
tag_name = "{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
